 * Fix #3504: project cookie not cleared at logout
 * Fix #3567: Reminders can be added for a readonly bug.
 * Fix #3622: Tweak attachment SQL in print bug pages.
 * Fix #3629: Duplicate Error ID.
 * Fix #3641: 'Date submited' in reports is always '12-31-69'.
 * Fix #3723: No ability to edit or even delete news is associated project was deleted.
 * Fix #3781: Fixed external URL in admin/check.php
 * Fix #3824: Private bug reports and bugnotes are sent out as notifications to everyone.
 * Fix #3826: Allow case of project name to be changed.
 * Fix #3837: Bugs can be edited after being closed.
 * Fix #3840: Why strip the leading spaces from Description? (applied to all multi-line fields in issue + issue notes).
 * Fix #3851: Ability to change the view status for a group of bugs
 * Fix #3852: OK button in View Issues page is not localised
 * Fix #3853: Filters sometime generate an invalid query (partial fix).
 * Fix #3866: URLs that include bookmark are not hyperlinked correctly.
 * Fix #3879: Empty entry in project select field can cause bugs to be moved to non-existing project.
 * New Config: set_view_status_threshold (default REPORTER) - threshold needed to set the view status while reporting a bug / bugnote.
 * New Config: change_view_status_threshold (default UPDATER) - threshold needed to update the view status while updating a bug / bugnote.
 * New Config: view_handler_threshold (default VIEWER) - threshold needed to view the bug handler (now works for emails only).
 * New Config: view_history_threshold (default VIEWER) - threshold needed to view the bug history (now works for emails only).
 * New Config: view_attachments_threshold (default VIEWER).  Access level needed to view bugs attachments.  View means to see the file names sizes, and timestamps of the attachments.
 * New Config: download_attachments_threshold (default VIEWER).  Access level needed to download bug attachments.